# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  config_parser.py  maze=text.txt  pyproject.toml  requirements.txt  test_menu.py
display/: __init__.py  fake_maze.py  renderer.py
mazegen/: __init__.py  config_parser.py  generator.py
tests/: test_menu.py  test_renderer.py
utils/: Notes.txt
